@@ -1,6 +1,7 @@
 Upcoming:
 - Deleting a player from the matter receiver and transmitter player list will now also work based on selection
 - Sciguyryan implemented a persistant tag on entities that are spawned by the RFTools spawner (boolean tag rftoolsutility:spawner)
+- New feature for sensors. They can now also trigger on amount of items (as entities)
 
 1.19-5.1.1:
 - The charged ported gui works again in 1.19.3
